--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,7 +18,7 @@ Style/Encoding:
   Enabled: true
 
 Style/FrozenStringLiteralComment:
-  EnforcedStyle: always
+  Enabled: false
 
 Metrics/BlockLength:
   Exclude:
